# rag_condominio

./: .gitignore  groq_models.py  pyproject.toml  relatorio_consolidado_modelos_20250626_095859.md
0_base_conhecimento/processed_docs_cache/: 049b078c-b5bf-4d97-bdf7-a2fbd7c66f3b.txt  065b78d0-c521-4ff9-9932-3825b4b82437.txt  080a5ffd-2464-40f4-92c0-b4b07e45f617.txt  2789187e-d466-448c-95ff-f7ff1250a5a4.txt  280c2644-d328-40d5-bd2c-755a12df2a78.txt  2ab34b5f-907f-4a18-b0d1-00b152a94df0.txt  2d264460-0427-482b-ae8d-1c63b20fc53a.txt  5f64b310-fb6b-412e-b295-96c52a2a1cf4.txt  633681a6-5e09-4894-b648-7204c60baea2.txt  65acae7c-a59f-4e10-8d41-22632869a150.txt  6917e5df-e366-4198-98b0-1ee290786cb9.txt  7cf9f6a5-99d3-4c15-9197-bfb22d2ea64e.txt  874d4d25-d861-48a4-8060-b2c281d0ff20.txt  98e667e9-9dc1-4e00-a6fe-51fb7fa0b1a1.txt  9c5d36c6-bda9-40df-a782-6f42537facf5.txt  9c7408f2-660f-4f7d-8272-3e8b462be3ae.txt  ATA_2025.txt  ATA_22_04_2025.docx  ATA_22_04_2025.txt  a3ab79c5-52e6-43bd-8743-58a5714651b1.txt  cd0a0fe2-f556-4d41-8de8-06eb5b0e0230.txt  dbf86d04-be52-4e18-81f1-8363f6b313e7.txt  de470402-edbe-45ca-9e00-c4604382f55d.txt  df61199b-6199-471d-a952-219f17af1950.txt  e96e4dac-fc58-4346-a8cc-7f349b0e4458.txt  fa4323cb-3eae-4339-9357-ae5c84a233de.txt
1_langraph/: config.py  document_loader.py  graph_nodes.py  llm_manager.py  main.py  qa_session.py  utils.py
2_langraph/: README.md  agent.py  document_loader.py  graph_nodes.py  llm_manager.py  main.py  qna.py  relatorio_consolidado_modelos_20250625_164826.md  solar4.ipynb  solar_com_limites.ipynb
3_rag_tradicional/: day5.ipynb  extracao_docling.ipynb  rag.ipynb  rag.py  rag_completo.ipynb
(+24 files in other folders)
